--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Ahmed4582.github.io/Movie",
+  "homepage": "https://youssefkhaled23.github.io/Trending-Movie",
   "name": "movie-night",
   "version": "0.1.0",
   "private": true,
